configurtion.  changing content in index.  icon color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -222,7 +222,8 @@ input, select, textarea {
   color: #555555; }
 
 a {
-  color: #ce1b28; }
+    color: #2f6fd6;
+}
 
 strong, b {
   color: #555555; }
